--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 exceptiongroup==1.2.2
+gunicorn==23.0.0
 iniconfig==2.1.0
 packaging==25.0
 pluggy==1.5.0
