test: Criacao de testes unitarios

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+coverage==7.8.2
 dj-database-url==2.3.0
 Django==5.2
 django-cors-headers==4.7.0
@@ -22,11 +23,10 @@ pytest-django==4.11.1
 python-dotenv==1.1.0
 pytz==2025.1
 PyYAML==6.0.2
+setuptools==80.8.0
 sqlparse==0.5.3
 tomli==2.2.1
 typing_extensions==4.13.2
 tzdata==2025.2
 uritemplate==4.1.1
 whitenoise==6.9.0
-setuptools
-
